# docs/swagger/openapi.json
@@ -1,23 +1,23 @@
 {
-    "openapi": "3.1.0",
+    "openapi": "3.0.0",
     "info": {
-        "title": "AWS Lambda Handler Cookbook - Orders Service",
+        "title": "Orders API",
         "version": "1.0.0"
     },
     "servers": [
         {
-            "url": "/prod"
+            "url": "/"
         }
     ],
     "paths": {
-        "/api/orders": {
+        "/api/orders/": {
             "post": {
                 "tags": [
                     "CRUD"
                 ],
                 "summary": "Create an order",
                 "description": "Create an order identified by the body payload",
-                "operationId": "handle_create_order_api_orders_post",
+                "operationId": "handle_create_order_api_orders__post",
                 "requestBody": {
                     "content": {
                         "application/json": {
