# service/handlers/handle_create_order.py
@@ -1,20 +1,30 @@
+from http import HTTPStatus
 from typing import Any
 
 from aws_lambda_env_modeler import get_environment_variables, init_environment_variables
+from aws_lambda_powertools.event_handler import BedrockAgentResolver, Response, content_types
 from aws_lambda_powertools.event_handler.openapi.params import Body
-from aws_lambda_powertools.logging import correlation_paths
-from aws_lambda_powertools.metrics import MetricUnit
 from aws_lambda_powertools.shared.types import Annotated
 from aws_lambda_powertools.utilities.typing import LambdaContext
 
-from service.handlers.models.dynamic_configuration import MyConfiguration
 from service.handlers.models.env_vars import MyHandlerEnvVars
-from service.handlers.utils.dynamic_configuration import parse_configuration
-from service.handlers.utils.observability import logger, metrics, tracer
-from service.handlers.utils.rest_api_resolver import ORDERS_PATH, app
+from service.handlers.utils.observability import logger
 from service.logic.create_order import create_order
+from service.models.exceptions import InternalServerException
 from service.models.input import CreateOrderRequest
 from service.models.output import CreateOrderOutput, InternalServerErrorOutput
+
+ORDERS_PATH = '/api/orders/'
+
+app = BedrockAgentResolver()
+
+
+@app.exception_handler(InternalServerException)
+def handle_internal_server_error(ex: InternalServerException):  # receives exception raised
+    logger.exception('finished handling request with internal error')
+    return Response(
+        status_code=HTTPStatus.INTERNAL_SERVER_ERROR, content_type=content_types.APPLICATION_JSON, body=InternalServerErrorOutput().model_dump()
+    )
 
 
 @app.post(
@@ -39,10 +49,6 @@ def handle_create_order(create_input: Annotated[CreateOrderRequest, Body(embed=F
     logger.debug('environment variables', env_vars=env_vars.model_dump())
     logger.info('got create order request', order=create_input.model_dump())
 
-    my_configuration = parse_configuration(model=MyConfiguration)
-    logger.debug('fetched dynamic configuration', configuration=my_configuration.model_dump())
-
-    metrics.add_metric(name='ValidCreateOrderEvents', unit=MetricUnit.Count, value=1)
     response: CreateOrderOutput = create_order(
         order_request=create_input,
         table_name=env_vars.TABLE_NAME,
@@ -54,8 +60,6 @@ def handle_create_order(create_input: Annotated[CreateOrderRequest, Body(embed=F
 
 
 @init_environment_variables(model=MyHandlerEnvVars)
-@logger.inject_lambda_context(correlation_id_path=correlation_paths.API_GATEWAY_REST)
-@metrics.log_metrics
-@tracer.capture_lambda_handler(capture_response=False)
+@logger.inject_lambda_context(log_event=True)
 def lambda_handler(event: dict[str, Any], context: LambdaContext) -> dict[str, Any]:
     return app.resolve(event, context)
